add theme and generalised css to both index.css and tailwind.config

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .button {
+    @apply bg-secondary text-ltext p-3 rounded-lg shadow-md hover:scale-105;
+  }
+
+  .box {
+    @apply bg-primary text-dtext p-3 rounded-lg shadow-md;
+  }
+}
